<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">有料</string>
    <string name="app_name1">有料视频</string>
    <string name="slashes">/</string>
    <string name="tab_homepage">首页</string>
    <string name="tab_claim">认领</string>
    <string name="tab_discover">发现</string>
    <string name="tab_mine">我的</string>
    <string name="tab_follow_video">关注</string>
    <string name="tab_recommend_video">推荐</string>
    <string name="tab_hot_video">最热</string>
    <string name="tab_new_video">最新</string>
    <string name="tab_profile">我的</string>
    <string name="play_count">播放次数</string>
    <string name="publish_time">发布时间</string>
    <string name="video_description">视频描述</string>
    <string name="favorite">点赞</string>
    <string name="upload_video">上传视频</string>
    <string name="upload_tips">仅支持3秒~10分钟的视频</string>
    <string name="next">下一步</string>
    <string name="action_settings">设置</string>
    <string name="press_back_to_exit">再按一次退出应用</string>
    <string name="xunlei">迅雷</string>
    <string name="create_short_success">创建桌面快捷方式成功</string>
    <string name="title_activity_login">账户登录</string>
    <string name="login_tip">你离大奖只差登录这一步了！</string>
    <string name="wechat_btn_str">微信</string>
    <string name="phone_btn_str">手机</string>
    <string name="phone_num_et_hint">请输入手机号</string>
    <string name="phone_code_et_hint">请输入验证码</string>
    <string name="phone_send_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="phone_bind_tip">绑定手机号可以参与活动，赢取惊喜大奖！</string>
    <string name="phone_bind_skip">放弃领奖机会，跳过&#160;></string>
    <string name="phone_bind_title">绑定手机</string>
    <string name="phone_num_format_tip">手机号码格式不正确</string>
    <string name="phone_get_code_tip">当日获取验证码次数过多</string>
    <string name="user_no_net_video_tip">网络好像有点问题，请稍后再试</string>
    <string name="phone_code_err">手机号或验证码不正确，请检查后重试</string>
    <string name="phone_valid_code_tip">验证码输入次数过多，请重新获取</string>
    <string name="loading">正在载入&#8230;</string>
    <string name="login_failed_tip">登录失败，请稍后再试</string>
    <string name="login_success_tip">登录成功</string>
    <string name="bind_phone_failed_tip">绑定手机号失败</string>
    <string name="phone_has_used_tip">此帐号已被注册或已绑定其他帐号，换一个试试</string>
    <string name="bind_phone_success_tip">绑定手机号成功</string>
    <string name="get_verification_code_fail">获取验证码失败</string>
    <string name="phone_send_code_again">重新获取验证码</string>
    <string name="phone_send_code_tip">%1$ds后重新发送</string>
    <string name="user_login_dialog_title">登录帐号</string>
    <string name="user_login_dialog_tip">上传视频必须登录，登录后可以参与活动，轻松赢取海量奖品！</string>
    <string name="user_login_dialog_cancle">不登录，放弃上传</string>
    <string name="phone_login_title">手机登录</string>
    <string name="login_account_bind_tip">绑定第三方帐号，一键登录更便捷</string>
    <string name="login_account_bind_skip">不绑定，跳过&#160;></string>
    <string name="login_account_bind_wx">绑定微信帐号</string>
    <string name="login_account_bind_qq">绑定QQ帐号</string>
    <string name="login_account_bind_wb">绑定微博帐号</string>
    <string name="user_center_title">个人主页</string>
    <string name="oauth_failed_tip">授权失败</string>
    <string name="bind_failed_tip">绑定失败</string>
    <string name="bind_success_tip">绑定成功</string>
    <string name="no_login_btn_text">马上登录</string>
    <string name="user_message_text">我的消息</string>
    <string name="user_like_text">喜欢</string>
    <string name="user_like_title">我喜欢的视频</string>
    <string name="user_video_text">上传</string>
    <string name="user_video_title">我上传的视频</string>
    <string name="user_topic_text">我关注的话题</string>
    <string name="user_follow_text">我关注的人</string>
    <string name="user_fans_text">我的粉丝</string>
    <string name="user_not_upload_video">上传第一个视频</string>
    <string name="user_not_like_video">暂无喜欢的视频</string>
    <string name="user_center_setting">设置</string>
    <string name="user_center_point">金币</string>
    <string name="get_user_info_err">获取用户信息失败</string>
    <string name="video_play_failed">视频播放失败</string>
    <string name="update_title">有新版本啦！</string>
    <string name="update_version">最新版本: %1$s</string>
    <string name="update_now">立即升级</string>
    <string name="not_now">暂不升级</string>
    <string name="operation_reply">评论</string>
    <string name="operation_share">分享</string>
    <string name="operation_like">点赞</string>
    <string name="operation_unlike">取消点赞</string>
    <string name="delete_video">删除</string>
    <string name="delete_video_dialog_title">删除视频</string>
    <string name="delete_video_dialog_tip">视频删除后将不可恢复，请谨慎操作！</string>
    <string name="delete_video_success">删除成功</string>
    <string name="no_comment">暂无评论，快来抢沙发</string>
    <string name="zero_comment">暂无评论</string>
    <string name="no_such_topic">暂无该话题</string>
    <string name="no_topic">暂无话题</string>
    <string name="no_message">暂无消息</string>
    <string name="no_content">暂无内容</string>
    <string name="no_liked_topic">暂无关注的话题</string>
    <string name="no_new_content_tip">已经是最新了，去最热看看吧！</string>
    <string name="no_network_tip">网络未连接，请检查你的网络设置</string>
    <string name="server_error">服务器开小差了，请稍后重试（%s）</string>
    <string name="network_not_available">网络未连接，请联网后重试</string>
    <string name="request_timeout">网络超时，请检查网络后重试</string>
    <string name="login_expired">登录失效了，请重新登录</string>
    <string name="video_tag">#%s#</string>
    <string name="all_topic">全部话题</string>
    <string name="action_cancel">取消</string>
    <string name="action_select_all">全选</string>
    <string name="action_unselect_all">全不选</string>
    <string name="rlv_pull_to_refresh">下拉刷新</string>
    <string name="rlv_release_to_refresh">松开刷新</string>
    <string name="rlv_last_loading_time">上次更新：%1$s</string>
    <string name="rlv_loading_more">加载更多…</string>
    <string name="rlv_refreshing">正在刷新&#8230;</string>
    <string name="weixin_not_installed">请先安装微信</string>
    <string name="qq_not_installed">请先安装QQ</string>
    <string name="share_to">分享到</string>
    <string name="wechat_platform">微信</string>
    <string name="wxcircle_platform">朋友圈</string>
    <string name="qq_platform">QQ</string>
    <string name="qzone_platform">QQ空间</string>
    <string name="video_status_review">审核中</string>
    <string name="video_status_reject">未通过</string>
    <string name="unreviewed_video_cannot_share">未审核通过的视频暂时不能分享</string>
    <string name="report_video">举报</string>
    <string name="choose_report_reason">请选择举报原因：</string>
    <string name="input_memo_hint">请填写补充说明（可选）</string>
    <string name="report_porn">色情</string>
    <string name="report_violence">暴力</string>
    <string name="report_abuse">人身攻击</string>
    <string name="report_advertisement">广告</string>
    <string name="report_politics">政治</string>
    <string name="report_other">其他</string>
    <string name="dialog_comment_title">给五星好评，赢取迅雷白金会员卡</string>
    <string name="dialog_comment_message">到应用商店给五星好评，有机会赢取迅雷白金会员卡。50张白金月卡，先到先得。</string>
    <string name="go_next_time">下次再说</string>
    <string name="go_now">现在就去</string>
    <string name="never_show">不再提示</string>
    <string name="no_market_support">未发现应用商店</string>
    <string name="reply_success">评论成功</string>
    <string name="message_comment_prefix">评论：</string>
    <string name="message_reply_prefix">回复</string>
    <string name="message_reply_suffix">：</string>
    <string name="message_praise_video">赞了这条视频</string>
    <string name="message_praise_comment">赞了这条评论</string>
    <string name="send_error">评论发送失败，请稍后再试</string>
    <string name="topic_message">%1$s：%2$s</string>
    <string name="message_my_received_praise">收到的赞</string>
    <string name="message_title">我的消息</string>
    <string name="message_my_received_praise_count">+%1$s</string>
    <string name="topic_title">话题</string>
    <string name="recommend">兴趣推荐</string>
    <string name="topic_followed">已关注</string>
    <string name="topic_follow">关注</string>
    <string name="user_topic_btn_text">查看更多话题</string>
    <string name="video_topic_hint">搜索话题</string>
    <string name="user_setting_new_comment">新的评论消息通知</string>
    <string name="user_setting_new_comment_tip">视频或评论被回复时，将通知你</string>
    <string name="user_setting_new_liked">新的点赞消息通知</string>
    <string name="user_setting_new_liked_tip">有人赞了你的视频或评论，将通知你</string>
    <string name="user_setting_topic_new_msg">关注的话题有新动态通知</string>
    <string name="user_setting_topic_new_msg_tip">关注的话题产生了新的视频，将通知你</string>
    <string name="user_setting_logout">退出帐号</string>
    <string name="dialog_logout_title">退出</string>
    <string name="dialog_logout_message">确定退出帐号？</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix"><xliff:g example="123" id="number">%1$s</xliff:g> <xliff:g example="KB" id="unit">%2$s</xliff:g></string>
    <string name="just_now">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="month_day_format">MM月dd日</string>
    <string name="year_month_day_format">yyyy年MM月dd日</string>
    <string name="login_account_bind_title">绑定第三方帐号</string>
    <string name="user_upload_tip">上传</string>
    <string name="user_no_upload">还没上传视频</string>
    <string name="video_upload_retry_title">重试上传视频</string>
    <string name="video_upload_retry_message">你之前上传的视频没有成功上传，是否重试？</string>
    <string name="video_upload_retry_confirm">重试上传</string>
    <string name="video_upload_btn_hint">仅支持3秒~10分钟的MP4短视频</string>
    <string name="video_upload_btn">下一步</string>
    <string name="video_upload_title">选择视频</string>
    <string name="video_upload_kuaishou_hint">上传推荐视频可获得更多播放和分享</string>
    <string name="video_upload_wechat_hint">上传微信视频有可能获得更多粉丝哦~</string>
    <string name="video_uploaded">已上传</string>
    <string name="video_recommend_upload">推荐上传</string>
    <string name="no_file">没有文件</string>
    <string name="video_publish_hint">在此输入视频描述信息</string>
    <string name="video_publish_hint2">完善描述</string>
    <string name="video_comment_topic">#添加话题#</string>
    <string name="uploading_video">正在上传视频…</string>
    <string name="video_comment_limit">还可输入%1$s字</string>
    <string name="bind_phone_dialog_tip">上传视频可以参与活动，有机会赢取大奖。若不绑定手机，我们将无法通知你中奖信息！</string>
    <string name="bind_phone_dialog_bind">马上绑定</string>
    <string name="bind_phone_dialog_cancle">不绑定，放弃奖品</string>
    <string name="video_data_consumption_dialog_title">流量使用提醒</string>
    <string name="video_data_consumption_dialog_message">你正在使用数据流量，使用流量上传将消耗%1$s流量。</string>
    <string name="video_data_consumption_confirm">使用流量上传</string>
    <string name="video_data_consumption_cancel">取消</string>
    <string name="video_tag_search_lead">#</string>
    <string name="video_comment_hint">点击选择话题</string>
    <string name="video_tag_search_hint">自定义话题</string>
    <string name="upload_video_failed_progress">"Opps:(发布失败，点击立即重试>>"</string>
    <string name="upload_video_failed_external_progress">"发布失败，换个视频试试吧~"</string>
    <string name="upload_video_success_progress">"\\(^o^)/视频发布成功！"</string>
    <string name="upload_video_failed">上传失败</string>
    <string name="upload_video_success">上传成功</string>
    <string name="search_file_type_picture">图片</string>
    <string name="search_file_type_video">视频</string>
    <string name="search_file_type_music">音乐</string>
    <string name="search_file_type_apk">安装包</string>
    <string name="search_file_type_doc">文档</string>
    <string name="search_file_type_other">其他项</string>
    <string name="wechat_video">%s短视频</string>
    <string name="load_more">查看更多</string>
    <string name="notification_name_combine"><![CDATA[zh_cn=%1$s&zh_tw=%2$s&=%3$s]]></string>
    <string name="video_upload_item_title">%1$s (%2$s)</string>
    <string name="user_icon">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_sign">个人签名</string>
</resources>