<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/phone_num_et"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/phone_input_up_bg"
        android:hint="@string/phone_num_et_hint"
        android:inputType="phone"
        android:paddingLeft="13dp"
        android:textColor="@color/text_color_black_80alpha"
        android:textColorHint="@color/text_color_tertiary"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/phone_input_up_bg"
        android:hint="@string/phone_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:textColor="@color/text_color_black_80alpha"
        android:textColorHint="@color/text_color_tertiary"
        android:textSize="14sp" />

    <Button
        android:id="@+id/phone_login_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_claim_bg"
        android:text="@string/login"
        android:textColor="@color/text_color_primary"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/phone_bind_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/phone_bind_tip"
        android:textColor="@color/text_color_black_60alpha"
        android:textSize="11sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/phone_bind_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="25dp"
        android:text="@string/phone_bind_skip"
        android:textColor="@color/bind_skip_text_color"
        android:textSize="12sp"
        android:visibility="gone" />

</LinearLayout>