<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mine_point_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mine_point_num"
                style="@style/MineCountTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/mine_page_header_count"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="0" />

            <TextView
                style="@style/MineTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/user_center_point"
                android:textSize="11sp"
                android:textColor="@color/mine_page_header_text"
                android:layout_marginTop="2dp"/>


        </LinearLayout>

        <View
            android:layout_width="0.25dp"
            android:layout_height="30.7dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/divider" />

        <LinearLayout
            android:id="@+id/mine_liked_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mine_liked_num"
                style="@style/MineCountTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/mine_page_header_count"
                android:textStyle="bold"
                android:text="0" />

            <TextView
                style="@style/MineTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/user_like_text"
                android:textSize="11sp"
                android:textColor="@color/mine_page_header_text"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

        <View
            android:layout_width="0.25dp"
            android:layout_height="30.7dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/divider" />

        <LinearLayout
            android:id="@+id/mine_video_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mine_video_num"
                style="@style/MineCountTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/mine_page_header_count"
                android:textStyle="bold"
                android:text="0" />

            <TextView
                style="@style/MineTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/user_video_text"
                android:textSize="11sp"
                android:textColor="@color/mine_page_header_text"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/homepage_header_padding"
        android:background="@color/background_divide" />

    <FrameLayout
        android:id="@+id/mine_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13.3dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/message_img" />


            <TextView
                style="@style/MineTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_message_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/mine_msg_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_new_msg_count_bg"
                android:gravity="center"
                android:minWidth="20dp"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17.3dp"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dip"
            android:layout_gravity="bottom"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="13.3dp"
            android:background="@drawable/divider" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/mine_topic_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13.3dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/topic_img" />

            <TextView
                style="@style/MineTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_topic_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/mine_topic_num"
                style="@style/MineCountTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17.3dp"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dip"
            android:layout_gravity="bottom"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="13.3dp"
            android:background="@drawable/divider" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/mine_follow_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13.3dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/follow_img" />

            <TextView
                style="@style/MineTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_follow_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/mine_follow_num"
                style="@style/MineCountTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17.3dp"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dip"
            android:layout_gravity="bottom"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="13.3dp"
            android:background="@drawable/divider" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/mine_fans_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/card_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/fans_img" />

        <TextView
            style="@style/MineTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_fans_text" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/mine_fans_num"
            style="@style/MineCountTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="17.3dp"
            android:src="@drawable/arrow_right" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/homepage_header_padding"
        android:background="@color/background_divide" />

    <LinearLayout
        android:id="@+id/mine_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/card_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting_img" />

        <TextView
            style="@style/MineTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_center_setting" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="17.3dp"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/homepage_header_padding"
        android:background="@color/background_divide" />

</LinearLayout>