<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/layout_user_icon"
            style="@style/ListItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:minHeight="50dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_icon"
                android:textColor="@color/text_color_black_90alpha" />

            <ImageView
                android:id="@+id/user_icon_img"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginRight="13dp"
                android:background="@drawable/head_icon_bg"
                android:padding="2px"
                android:src="@drawable/my_head_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_right_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="13.3dp"
            android:background="@drawable/divider" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_user_name"
            style="@style/ListItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:minHeight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_nickname"
                android:textColor="@color/text_color_black_90alpha" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:textColor="@color/text_color_black_50alpha"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_right_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="13.3dp"
            android:background="@drawable/divider" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_user_sex"
            style="@style/ListItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:minHeight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_sex"
                android:textColor="@color/text_color_black_90alpha" />

            <TextView
                android:id="@+id/tv_user_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="right"
                android:maxLines="1"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:textColor="@color/text_color_black_50alpha"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_right_normal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="13.3dp"
            android:layout_marginRight="13.3dp"
            android:background="@drawable/divider" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_user_desc"
        style="@style/ListItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:minHeight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_sign"
            android:layout_marginRight="13dp"
            android:textColor="@color/text_color_black_90alpha" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_user_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="12"
            android:maxLines="1"
            android:layout_marginRight="13dp"
            android:textColor="@color/text_color_black_50alpha"
            android:textSize="@dimen/secondary_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right_normal" />
    </LinearLayout>


</LinearLayout>
